SampleApp_25cG_C/SDK/CMMISDK_Api.h

	error_km KMAPI CMMISDK_Connect(const CMMISDK_Port* inPortInfo, int32_km* outInstrumentNo);
	error_km KMAPI CMMISDK_Disconnect(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_GetInstrumentInfo(int32_km inInstrumentNo, CMMISDK_InstrumentInfo* outInfo);
	error_km KMAPI CMMISDK_GetSDKVersion(CMMISDK_Version* version);
	error_km KMAPI CMMISDK_GetWarning(int32_km inInstrumentNo, CMMISDK_Warning* warning);
	error_km KMAPI CMMISDK_GetCalibrationStatus(int32_km inInstrumentNo, CMMISDK_CalStatus* outCalStatus);
	error_km KMAPI CMMISDK_PerformZeroCalibration(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_PerformWhiteCalibration(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_PerformGlossCalibration(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_PerformUserCalibration(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_PerformMeasurement(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_PollingMeasurement(int32_km inInstrumentNo, CMMISDK_MeasStatus* outStatus);
	error_km KMAPI CMMISDK_CancelMeasurement(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_ReadLatestDataSpec(int32_km inInstrumentNo, CMMISDK_DataType inDataType, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_ReadLatestDataColor(int32_km inInstrumentNo, CMMISDK_DataType inDataType, const CMMISDK_ColorCond *inColorCond, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_LoadLatestData(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_GetLatestDataSpec(int32_km inInstrumentNo, CMMISDK_DataType inDataType, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_GetLatestDataColor(int32_km inInstrumentNo, CMMISDK_DataType inDataType, const CMMISDK_ColorCond *inColorCond, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_SetWhiteCalibrationData(int32_km inInstrumentNo, CMMISDK_CalDataType inDataType, int32_km inCalId, const CMMISDK_Data* inCalData);
	error_km KMAPI CMMISDK_GetWhiteCalibrationData(int32_km inInstrumentNo, CMMISDK_CalDataType inDataType, int32_km* outCalId, CMMISDK_Data* outCalData);
	error_km KMAPI CMMISDK_SetGlossCalibrationData(int32_km inInstrumentNo, CMMISDK_MeasArea inArea, int32_km inCalId, float64_km inCalData);
	error_km KMAPI CMMISDK_GetGlossCalibrationData(int32_km inInstrumentNo, CMMISDK_MeasArea inArea, int32_km* outCalId, float64_km* outCalData);
	error_km KMAPI CMMISDK_SetUserCalibrationData(int32_km inInstrumentNo, CMMISDK_CalDataType inDataType, const CMMISDK_UserCalId* inCalId, const CMMISDK_Data* inCalData);
	error_km KMAPI CMMISDK_GetUserCalibrationData(int32_km inInstrumentNo, CMMISDK_CalDataType inDataType, CMMISDK_UserCalId* outCalId, CMMISDK_Data* outCalData);
	error_km KMAPI CMMISDK_SetUserCalibrationEnable(int32_km inInstrumentNo, CMMISDK_OnOff inCalEnable);
	error_km KMAPI CMMISDK_GetUserCalibrationEnable(int32_km inInstrumentNo, CMMISDK_OnOff* outCalEnable);
	error_km KMAPI CMMISDK_SetTriggerMode(int32_km inInstrumentNo, CMMISDK_OnOff inTrigger);
	error_km KMAPI CMMISDK_GetTriggerMode(int32_km inInstrumentNo, CMMISDK_OnOff* outTrigger);
	error_km KMAPI CMMISDK_ClearTriggerData(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_IsTriggerData(int32_km inInstrumentNo, CMMISDK_OnOff* outData);
	error_km KMAPI CMMISDK_GetZeroCalibrationDate(int32_km inInstrumentNo, CMMISDK_DateType inType, CMMISDK_DateTime* outDate);
	error_km KMAPI CMMISDK_GetWhiteCalibrationDate(int32_km inInstrumentNo, CMMISDK_DateTime* outDate);
	error_km KMAPI CMMISDK_GetGlossCalibrationDate(int32_km inInstrumentNo, CMMISDK_DateTime* outDate);
	error_km KMAPI CMMISDK_GetUserCalibrationDate(int32_km inInstrumentNo, CMMISDK_DateTime* outDate);
	error_km KMAPI CMMISDK_ClearUvAdjustInfo(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_SetProfileForUvAdjust(int32_km inInstrumentNo, const CMMISDK_Data* inData);
	error_km KMAPI CMMISDK_GetProfileForUvAdjust(int32_km inInstrumentNo, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_SetWiForUvAdjust(int32_km inInstrumentNo, const CMMISDK_UvAdjustIndex* inData);
	error_km KMAPI CMMISDK_GetWiForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustIndex* outData);
	error_km KMAPI CMMISDK_SetTintForUvAdjust(int32_km inInstrumentNo, const CMMISDK_UvAdjustIndex* inData);
	error_km KMAPI CMMISDK_GetTintForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustIndex* outData);
	error_km KMAPI CMMISDK_SetIsoBrightnessForUvAdjust(int32_km inInstrumentNo, const CMMISDK_UvAdjustIndex* inData);
	error_km KMAPI CMMISDK_GetIsoBrightnessForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustIndex* outData);
	error_km KMAPI CMMISDK_SetGanzForUvAdjust(int32_km inInstrumentNo, const CMMISDK_UvAdjustGG* inData);
	error_km KMAPI CMMISDK_GetGanzForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustGG* outData);
	error_km KMAPI CMMISDK_SetEachProfileForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, const CMMISDK_Data* inData);
	error_km KMAPI CMMISDK_GetEachProfileForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_SetEachWiForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, const CMMISDK_UvAdjustIndex* inData);
	error_km KMAPI CMMISDK_GetEachWiForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, CMMISDK_UvAdjustIndex* outData);
	error_km KMAPI CMMISDK_SetEachTintForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, const CMMISDK_UvAdjustIndex* inData);
	error_km KMAPI CMMISDK_GetEachTintForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, CMMISDK_UvAdjustIndex* outData);
	error_km KMAPI CMMISDK_SetEachIsoBrightnessForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, const CMMISDK_UvAdjustIndex* inData);
	error_km KMAPI CMMISDK_GetEachIsoBrightnessForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, CMMISDK_UvAdjustIndex* outData);
	error_km KMAPI CMMISDK_SetEachGanzForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, const CMMISDK_UvAdjustGG* inData);
	error_km KMAPI CMMISDK_GetEachGanzForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, CMMISDK_UvAdjustGG* outData);
	error_km KMAPI CMMISDK_SetDataForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, int32_km inNum, const CMMISDK_Data* inFull, const CMMISDK_Data* inCut);
	error_km KMAPI CMMISDK_GetDataForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, int32_km inNum, CMMISDK_Data* outFull, CMMISDK_Data* outCut);
	error_km KMAPI CMMISDK_PerformUvAdjust(int32_km inInstrumentNo, CMMISDK_CondUvAdjust inCond);
	error_km KMAPI CMMISDK_PerformUvAdjustUsingData(int32_km inInstrumentNo, CMMISDK_CondUvAdjust inCond);
	error_km KMAPI CMMISDK_ClearCoefForUvAdjust(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_SetCoefForUvAdjust(int32_km inInstrumentNo, CMMISDK_MeasArea inArea, CMMISDK_UvAdjustDataType inType, CMMISDK_CondUvAdjust inCond, const CMMISDK_UvAdjustCoef* inCoef);
	error_km KMAPI CMMISDK_GetCoefForUvAdjust(int32_km inInstrumentNo, CMMISDK_MeasArea inArea, CMMISDK_UvAdjustDataType inType, CMMISDK_CondUvAdjust* outCond, CMMISDK_UvAdjustCoef* outCoef);
	error_km KMAPI CMMISDK_SetMeasurementArea(int32_km inInstrumentNo, CMMISDK_MeasArea inArea);
	error_km KMAPI CMMISDK_GetMeasurementArea(int32_km inInstrumentNo, CMMISDK_MeasArea* outArea);
	error_km KMAPI CMMISDK_SetMeasurementType(int32_km inInstrumentNo, CMMISDK_MeasType inType);
	error_km KMAPI CMMISDK_GetMeasurementType(int32_km inInstrumentNo, CMMISDK_MeasType* outType);
	error_km KMAPI CMMISDK_SetMeasurementAngle(int32_km inInstrumentNo, CMMISDK_MeasAngle inAngle);
	error_km KMAPI CMMISDK_GetMeasurementAngle(int32_km inInstrumentNo, CMMISDK_MeasAngle* outAngle);
	error_km KMAPI CMMISDK_SetTiltDetection(int32_km inInstrumentNo, CMMISDK_OnOff inDetection);
	error_km KMAPI CMMISDK_GetTiltDetection(int32_km inInstrumentNo, CMMISDK_OnOff* outDetection);
	error_km KMAPI CMMISDK_SetMeasurementMode(int32_km inInstrumentNo, CMMISDK_MeasMode inMode);
	error_km KMAPI CMMISDK_GetMeasurementMode(int32_km inInstrumentNo, CMMISDK_MeasMode* outMode);