SDK/CMMISDK_Parameters.h

//COM port information
struct CMMISDK_Port
{
	char   port_name[SIZE_PORTNAME];	//COM port name
};
//Spectrophotometer information
struct CMMISDK_InstrumentInfo
{
	int32_km     DataSize;								//Reflectance    Size of data (determined by minimum wavelength, maximum wavelength, and wavelength pitch)
	int32_km     WaveLengthStart;						//Reflectance    Wavelength range: Minimum wavelength
	int32_km     WaveLengthEnd;							//Reflectance    Wavelength range: Maximum wavelength
	int32_km     WaveLengthPitch;						//Reflectance    Wavelength range: Wavelength pitch
	int32_km     SerialNo;								//Serial number
	int32_km     VersionMajor;							//Product version (Major)
	int32_km     VersionMinor;							//Product version (Minor)
	int32_km     VersionFree;							//Product version (Free)
	char         InstrumentName[SIZE_INSTRUMENT_NAME];	//Product name
};
//Version information
struct CMMISDK_Version
{
	int32_km     major;	//Major
	int32_km     minor;	//Minor
	int32_km     free;	//Free
};
//Measurement data
struct CMMISDK_Data
{
	float64_km   data[SIZE_DATA];	//Data
};
//Color value calculation conditions
struct CMMISDK_ColorCond
{
	CMMISDK_Observer	obs;			//Observer
	CMMISDK_Illuminant	ill;			//Illuminant
	CMMISDK_ColorSpace	colorSpace;		//Color space
										//	*A value other than COLOR_MUNSELL_C can be specified with CMMISDK_ReadLatestDataColor.
										//	*Only L*a*b*, Hunter Lab, and XYZ can be specified with CMMISDK_SetTargetDataColor and CMMISDK_GetTargetDataColor.
};


//User calibration ID
struct CMMISDK_UserCalId
{
	char   id[SIZE_USERCAL_ID];	//ID
};
//Index data for fluorescence adjustment
struct CMMISDK_UvAdjustIndex
{
	float64_km   value;				//value
	float64_km   tolerance;			//Allowable width
};


//Fluorescence adjustment coefficient
struct CMMISDK_UvAdjustCoef
{
	float64_km   coefficient[SIZE_DATA];	//Fluorescence coefficient
	float64_km   correction[SIZE_DATA];		//Fluorescence correction value
	float64_km   param[SIZE_GG_PARAM];		//Parameter
											//* In the case of Ganz & Griesser only, it is stored in the order of P · Q · C · m · n · k · dWdS
	int32_km     date[SIZE_DATE];			//Adjustment date
											//The array is stored in the order of year, month, day, hour, minute, second
};


//Ganz & Griesser fluorescence adjustment data
struct CMMISDK_UvAdjustGG
{
	int32_km     count;				//Number of samples used
	float64_km   WI[SIZE_GG];		//WI value for the number of samples used
	float64_km   Tint[SIZE_GG];		//Tint value for the number of samples used
};
//Date and time data
struct CMMISDK_DateTime
{
	int32_km     year;		//Year
	int32_km     month;		//Month
	int32_km     day;		//Day
	int32_km     hour;		//Hour
	int32_km     minute;	//Minute
	int32_km     second;	//Second
};