SampleApp_25cG_CS_C/SampleApp/SDK/CMMISDK_API.cs


    class CMMISDK_API_x86
    {
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_Connect(ref CMMISDK_Port inPortInfo, ref Int32 outInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_Disconnect(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetInstrumentInfo(Int32 inInstrumentNo, ref CMMISDK_InstrumentInfo outInfo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetSDKVersion(ref CMMISDK_Version version);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetWarning(Int32 inInstrumentNo, ref CMMISDK_Warning warning);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetCalibrationStatus(Int32 inInstrumentNo, ref CMMISDK_CalStatus outCalStatus);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_PerformZeroCalibration(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_PerformWhiteCalibration(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_PerformGlossCalibration(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_PerformUserCalibration(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_PerformMeasurement(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_PollingMeasurement(Int32 inInstrumentNo, ref CMMISDK_MeasStatus outStatus);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_CancelMeasurement(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_ReadLatestDataSpec(Int32 inInstrumentNo, CMMISDK_DataType inDataType, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_ReadLatestDataColor(Int32 inInstrumentNo, CMMISDK_DataType inDataType, ref CMMISDK_ColorCond inColorCond, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_LoadLatestData(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetLatestDataSpec(Int32 inInstrumentNo, CMMISDK_DataType inDataType, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetLatestDataColor(Int32 inInstrumentNo, CMMISDK_DataType inDataType, ref CMMISDK_ColorCond inColorCond, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetWhiteCalibrationData(Int32 inInstrumentNo, CMMISDK_CalDataType inDataType, Int32 inCalId, ref CMMISDK_Data inCalData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetWhiteCalibrationData(Int32 inInstrumentNo, CMMISDK_CalDataType inDataType, ref Int32 outCalId, ref CMMISDK_Data outCalData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetGlossCalibrationData(Int32 inInstrumentNo, CMMISDK_MeasArea inArea, Int32 inCalId, double inCalData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetGlossCalibrationData(Int32 inInstrumentNo, CMMISDK_MeasArea inArea, ref Int32 outCalId, ref double outCalData); //Scriptと違うので注意
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetUserCalibrationData(Int32 inInstrumentNo, CMMISDK_CalDataType inDataType, ref CMMISDK_UserCalId inCalId, ref CMMISDK_Data inCalData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetUserCalibrationData(Int32 inInstrumentNo, CMMISDK_CalDataType inDataType, ref CMMISDK_UserCalId outCalId, ref CMMISDK_Data outCalData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetUserCalibrationEnable(Int32 inInstrumentNo, CMMISDK_OnOff inCalEnable);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetUserCalibrationEnable(Int32 inInstrumentNo, ref CMMISDK_OnOff outCalEnable);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetTriggerMode(Int32 inInstrumentNo, CMMISDK_OnOff inTrigger);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetTriggerMode(Int32 inInstrumentNo, ref CMMISDK_OnOff outTrigger);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_ClearTriggerData(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_IsTriggerData(Int32 inInstrumentNo, ref CMMISDK_OnOff outData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetZeroCalibrationDate(Int32 inInstrumentNo, CMMISDK_DateType inType, ref CMMISDK_DateTime outDate);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetWhiteCalibrationDate(Int32 inInstrumentNo, ref CMMISDK_DateTime outDate);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetGlossCalibrationDate(Int32 inInstrumentNo, ref CMMISDK_DateTime outDate);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetUserCalibrationDate(Int32 inInstrumentNo, ref CMMISDK_DateTime outDate);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_ClearUvAdjustInfo(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
		extern public static Int32 CMMISDK_SetProfileForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_Data inData);
		[DllImport("CMMISDK_x86.dll")]
		extern public static Int32 CMMISDK_GetProfileForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_Data outData);
		[DllImport("CMMISDK_x86.dll")]
		extern public static Int32 CMMISDK_SetWiForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustIndex inData);
		[DllImport("CMMISDK_x86.dll")]
		extern public static Int32 CMMISDK_GetWiForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustIndex outData);
		[DllImport("CMMISDK_x86.dll")]
		extern public static Int32 CMMISDK_SetTintForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustIndex inData);
		[DllImport("CMMISDK_x86.dll")]
		extern public static Int32 CMMISDK_GetTintForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustIndex outData);
		[DllImport("CMMISDK_x86.dll")]
		extern public static Int32 CMMISDK_SetIsoBrightnessForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustIndex inData);
        [DllImport("CMMISDK_x86.dll")]
		extern public static Int32 CMMISDK_GetIsoBrightnessForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustIndex outData);
		[DllImport("CMMISDK_x86.dll")]
		extern public static Int32 CMMISDK_SetGanzForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustGG inData);
        [DllImport("CMMISDK_x86.dll")]
		extern public static Int32 CMMISDK_GetGanzForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustGG outData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetEachProfileForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_Data inData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetEachProfileForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetEachWiForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustIndex inData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetEachWiForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustIndex outData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetEachTintForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustIndex inData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetEachTintForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustIndex outData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetEachIsoBrightnessForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustIndex inData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetEachIsoBrightnessForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustIndex outData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetEachGanzForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustGG inData);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetEachGanzForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustGG outData);
        [DllImport("CMMISDK_x86.dll")]
		extern public static Int32 CMMISDK_SetDataForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, Int32 inNum, ref CMMISDK_Data inFull, ref CMMISDK_Data inCut);
        [DllImport("CMMISDK_x86.dll")]
		extern public static Int32 CMMISDK_GetDataForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, Int32 inNum, ref CMMISDK_Data outFull, ref CMMISDK_Data outCut);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_PerformUvAdjust(Int32 inInstrumentNo, CMMISDK_CondUvAdjust inCond);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_PerformUvAdjustUsingData(Int32 inInstrumentNo, CMMISDK_CondUvAdjust inCond);
        [DllImport("CMMISDK_x86.dll")]
		extern public static Int32 CMMISDK_ClearCoefForUvAdjust(Int32 inInstrumentNo);
		[DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetCoefForUvAdjust(Int32 inInstrumentNo, CMMISDK_MeasArea inArea, CMMISDK_UvAdjustDataType inType, CMMISDK_CondUvAdjust inCond, ref CMMISDK_UvAdjustCoef inCoef);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetCoefForUvAdjust(Int32 inInstrumentNo, CMMISDK_MeasArea inArea, CMMISDK_UvAdjustDataType inType, ref CMMISDK_CondUvAdjust outCond, ref CMMISDK_UvAdjustCoef outCoef);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetMeasurementArea(Int32 inInstrumentNo, CMMISDK_MeasArea inArea);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetMeasurementArea(Int32 inInstrumentNo, ref CMMISDK_MeasArea outArea);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetMeasurementType(Int32 inInstrumentNo, CMMISDK_MeasType inType);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetMeasurementType(Int32 inInstrumentNo, ref CMMISDK_MeasType outType);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetMeasurementAngle(Int32 inInstrumentNo, CMMISDK_MeasAngle inAngle);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetMeasurementAngle(Int32 inInstrumentNo, ref CMMISDK_MeasAngle outAngle);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetTiltDetection(Int32 inInstrumentNo, CMMISDK_OnOff inDetection);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetTiltDetection(Int32 inInstrumentNo, ref CMMISDK_OnOff outDetection);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetMeasurementMode(Int32 inInstrumentNo, CMMISDK_MeasMode inMode);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetMeasurementMode(Int32 inInstrumentNo, ref CMMISDK_MeasMode outMode);
